--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-```
+<pre>
 
 WARNING: DO NOT USE THIS COMMAND OVER THE PUBLIC INTERNET. PRIVATE NETWORKS ONLY.
 
@@ -50,5 +50,6 @@ Example 3:
     $>
 
 
-```
+</pre>
+
 
