--- a/README
+++ b/README
@@ -2,7 +2,7 @@
     WARNING: DO NOT USE THIS COMMAND OVER THE PUBLIC INTERNET. PRIVATE NETWORKS ONLY.
     
     Usage:
-        nopass-ssh [-verbose] [-string<N> <expected-text>] <ssh-options> <remote> '<shell-script>'
+        nopass-ssh [-verbose] [-string... <expected-text>] <ssh-options> <remote> '<shell-script>'
         nopass-ssh [-h|--help]
     
         nopass-ssh executes a command on a remote machine by reading the password
@@ -18,11 +18,13 @@
     
         <remote>                    IP address or hostname.
         '<shell-script>'            Script to be execute on <remote> machine.
-        -string0 <expected-y/n>     String on which to send 'yes\r\n' response. Default: '(yes/no)?'
+        -string-yn <y/n>            String on which to send 'yes\r\n' response. Default: '(yes/no)?'
                                     (Trailing whitespace is ignored in ssh output.)
-        -string1 <expected-pass>    String on which to send password response. Default: 'password:'
+        -string-alt-yn <y/n/x>      Alternative string to -string-yn. Both are checked.
+                                    Default: '(yes/no/[fingerprint])?'
+        -string-pass <pass>         String on which to send password response. Default: 'password:'
                                     (Trailing whitespace is ignored in ssh output.)
-        -string2 <expected-pass>    Optional string to wait on successful login. Not set by default.
+        -string-login <login>       Optional string to wait on successful login. Not set by default.
                                     This is useful if you don't know whether ssh will prompt for a
                                     password, such as if there is authentication key configured in
                                     ~/.ssh/authorized_keys
@@ -61,4 +63,5 @@
         $> echo 'My-p@ssW_Rd' | nopass-ssh -string2 Login-Ok -X -l elizabeth 10.1.23.45 'echo Login-Ok ; echo good ; '
         $>
         
+    
     
